prevent text highlighting in whole app

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -6,4 +6,8 @@
   /* workaround for mobile url-bar cutting off content */
   /* https://developer.chrome.com/blog/url-bar-resizing/ */
   height: 100%;
+
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
